@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +files/build.xml,
+  fastqc-0.11.2.ebuild:
+  added build.xml exported by author from Eclipse IDE (it doesn't work under ant
+  eclasses in my hands)
+
 *fastqc-0.11.2 (24 Feb 2015)
 
   24 Feb 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
